--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -469,23 +469,39 @@
     background-color: transparent;
 }
 
+.top-profil {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.top-profil span {
+    margin-right: 10px;
+}
+
 .top-profil div {
-    padding: 10px 10px 5px 10px;
+    display: flex;
+}
+
+.top-profil .profil-pic {
+    padding: 6px 6px 2px 6px;
     width: fit-content;
     border-radius: 100%;
     background-color: #cecece94;
 }
 
 .top-profil img {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 50%;
 }
 
 .top-profil .online {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border-radius: 50px;
+    margin-left: -12px;
+    margin-top: 45px;
     background-color: green;
 }
