--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -396,6 +396,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
+    box-shadow: 0px 1px 10px #f4f3f3f7;
 }
 
 .left-side nav {
