--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -519,12 +519,21 @@
 
 .myprofil-details {
     width: 70%;
-    padding: 20px 20px;
-    box-shadow: 0px 1px 10px #f4f3f3f7;
+    padding: 20px 50px;
+    border-radius: 10px;
+    box-shadow: 0px 1px 10px #e2e2e2f7;
+}
+
+.profil-intro {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .myprofil img {
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     object-fit: cover;
+    margin-top: 20px;
+    border-radius: 50%;
 }
