--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -588,8 +588,17 @@
 
 .myprofil-details form .sub input {
     margin-top: 20px;
-    width: 100%;
     color: #ffff;
     border-radius: 25px;
+    width: fit-content;
+    padding: 15px 40px;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #141b1fda;
+}
+
+.profil-item {
+    width: 60%;
 }
