add to my repository

--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -384,7 +384,18 @@
 
 
 /*-----------------------------------/
-#User dashboard
+#Dashboard
+/-----------------------------------*/
+
+.order-prod img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+
+/*-----------------------------------/
+#User profil
 /-----------------------------------*/
 
 .user-dashboard {
