--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -387,10 +387,23 @@
 #Dashboard
 /-----------------------------------*/
 
-.order-container {
+.our-panier-prod {
     margin-top: 30px;
     padding-left: 50px;
     padding-right: 100px;
+}
+
+.order-prod {
+    display: flex;
+    gap: 15px;
+    -webkit-column-gap: 15px;
+    box-shadow: 0px 1px 10px #ebebeb9c;
+}
+
+.order-prod img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
 }
 
 
