--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -400,6 +400,15 @@
     box-shadow: 0px 1px 10px #ebebeb9c;
 }
 
+.tot-price {
+    display: flex;
+}
+
+.price {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .order-prod img {
     width: 150px;
     height: 150px;
