--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -430,14 +430,15 @@
     display: flex;
     margin-left: auto;
     flex-direction: column;
-    color: #fff;
+    color: #141b1fda;
     width: fit-content;
     text-align: right;
     font-size: 0.8rem;
-    padding: 5px 25px;
-    margin-top: -30px;
+    padding: 5px 30px;
+    margin-top: -35px;
     text-align: center;
-    background-color: #141b1fda;
+    background-color: #ffff;
+    box-shadow: 0px 1px 10px #e2e2e2a7;
 }
 
 
