--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -389,7 +389,7 @@
 
 .our-panier-prod {
     margin-top: 30px;
-    padding-left: 50px;
+    padding-left: 100px;
     padding-right: 100px;
 }
 
@@ -397,6 +397,7 @@
     display: flex;
     align-items: center;
     padding-right: 30px;
+    font-size: 0.9rem;
     justify-content: space-between;
     box-shadow: 0px 1px 10px #e2e2e2a7;
 }
@@ -439,6 +440,23 @@
     text-align: center;
     background-color: #ffff;
     box-shadow: 0px 1px 10px #e2e2e2a7;
+}
+
+.our-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: center;
+    -webkit-column-gap: 10px;
+}
+
+.our-buttons button {
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: #141b1fda;
 }
 
 
