--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -10,6 +10,14 @@
     justify-content: space-between;
 }
 
+.header-admin h2 {
+    margin-left: 50px;
+}
+
+.admin-menu {
+    margin-right: 50px;
+}
+
 .admin-menu i {
     font-size: 1.5rem;
 }
