--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -25,13 +25,14 @@
 .admin-section {
     display: grid;
     margin-top: 75px;
-    grid-template-columns: 25% auto;
+    grid-template-columns: 20% auto;
 }
 
 .first-bloc nav {
     display: flex;
     height: 100vh;
     padding-top: 30px;
+    gap: 10px;
     flex-direction: column;
     background-color: #141b1fda;
     box-shadow: 0px 1px 10px #ececec;
@@ -40,6 +41,13 @@
 .first-bloc nav a {
     display: flex;
     gap: 10px;
-    padding-left: 25px;
+    color: #fff;
+    padding: 10px 25px;
+    align-items: center;
     -webkit-column-gap: 10px;
+}
+
+.first-bloc nav .activ {
+    color: #141b1fda;
+    background-color: #fff;
 }
