add to my repository

--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -70,6 +70,7 @@
 / ------------------------- */
 
 .all-items {
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
