--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -15,6 +15,7 @@
 }
 
 .admin-menu {
+    display: none;
     margin-right: 50px;
 }
 
@@ -72,20 +73,26 @@
 .all-items {
     height: 90vh;
     display: flex;
-    gap: 15px;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 50px;
     align-items: center;
     justify-content: center;
-    -webkit-column-gap: 15px;
 }
 
 .all-items div {
-    gap: 10px;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     display: flex;
     text-align: center;
     flex-direction: column;
     justify-content: center;
-    -webkit-column-gap: 10px;
+    transition-delay: 0.2s;
+    transition: 0.5s ease-in-out;
     box-shadow: 0px 1px 10px #ececec;
+}
+
+.all-items div:hover {
+    color: #fff;
+    background-color: #141b1fda;
 }
