--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -72,29 +72,34 @@
 
 .all-items {
     height: 90vh;
+}
+
+.it {
     display: flex;
     flex-wrap: wrap;
     padding-left: 20px;
     padding-right: 50px;
     align-items: center;
+    justify-content: center;
     gap: 30px;
     -webkit-column-gap: 30px;
-    justify-content: center;
 }
 
-.all-items div {
+.it div {
     width: 250px;
-    height: 250px;
+    height: 200px;
+    padding: 10px 10px;
     display: flex;
     text-align: center;
     flex-direction: column;
     justify-content: center;
     transition-delay: 0.2s;
+    border-radius: 10px;
     transition: 0.5s ease-in-out;
     box-shadow: 0px 1px 10px #ececec;
 }
 
-.all-items div:hover {
+.it div:hover {
     color: #fff;
     background-color: #141b1fda;
 }
