--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -72,11 +72,12 @@
 
 .all-items {
     height: 90vh;
-    margin-top: auto;
-    margin-bottom: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.it {
+.all-items .bloc-content {
     display: flex;
     flex-wrap: wrap;
     padding-left: 20px;
@@ -86,9 +87,9 @@
     -webkit-column-gap: 30px;
 }
 
-.it div {
+.bloc-content div {
     width: 250px;
-    height: 200px;
+    height: 180px;
     padding: 10px 10px;
     display: flex;
     text-align: center;
@@ -96,11 +97,17 @@
     justify-content: center;
     transition-delay: 0.2s;
     border-radius: 10px;
+    gap: 10px;
+    -webkit-column-gap: 10px;
     transition: 0.5s ease-in-out;
     box-shadow: 0px 1px 10px #ececec;
 }
 
-.it div:hover {
+.bloc-content div i {
+    font-size: 1.2rem;
+}
+
+.bloc-content div:hover {
     color: #fff;
     background-color: #141b1fda;
 }
