--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -104,10 +104,21 @@
 }
 
 .bloc-content div i {
-    font-size: 1.2rem;
+    padding: 12px 15px;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 50%;
+    background: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: inset 13px 13px 26px #e3e3e3, inset -13px -13px 26px #ffffff;
 }
 
 .bloc-content div:hover {
     color: #fff;
     background-color: #141b1fda;
+}
+
+.bloc-content div:hover i {
+    color: #141b1fda;
 }
