--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -35,6 +35,8 @@
 / ------------------------- */
 
 .first-bloc nav {
+    width: 20%;
+    position: fixed;
     display: flex;
     height: 90vh;
     padding-top: 30px;
