--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -133,3 +133,22 @@
 .bloc-content div:hover i {
     color: #141b1fda;
 }
+
+
+/* ------------------------- /
+#Newsletter
+/ ------------------------- */
+
+.newsletter-form {
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.newsletter-form form {
+    width: 55%;
+    padding: 30px 35px;
+    text-align: center;
+    box-shadow: 0px 1px 10px #d9d9d9b8;
+}
