--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -198,3 +198,22 @@
     background-color: #fff;
     box-shadow: 0px 1px 10px #d9d9d9b8;
 }
+
+
+/* ------------------------- /
+#Slides
+/ ------------------------- */
+
+.add-slide {
+    display: flex;
+    font-size: 0.8rem;
+    padding: 10px 15px;
+    border-radius: 25px;
+    justify-content: flex-end;
+    background-color: #ffff;
+    box-shadow: 0px 1px 10px #d9d9d9b8;
+}
+
+.add-slide a {
+    color: #ffff;
+}
