--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -209,11 +209,19 @@
     font-size: 0.8rem;
     padding: 10px 15px;
     border-radius: 25px;
+    width: fit-content;
+    margin-left: auto;
     justify-content: flex-end;
     background-color: #ffff;
     box-shadow: 0px 1px 10px #d9d9d9b8;
 }
 
 .add-slide a {
-    color: #ffff;
+    color: #141b1fda;
+}
+
+.slide-items img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
 }
