--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -204,6 +204,12 @@
 #Slides
 / ------------------------- */
 
+.slide-details {
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 30px;
+}
+
 .add-slide {
     display: flex;
     font-size: 0.8rem;
@@ -211,12 +217,23 @@
     border-radius: 25px;
     width: fit-content;
     margin-left: auto;
+    transition-delay: 0.4s;
+    transition: 0.8s ease-in-out;
     justify-content: flex-end;
-    background-color: #ffff;
-    box-shadow: 0px 1px 10px #d9d9d9b8;
+    background-color: #141b1fda;
 }
 
 .add-slide a {
+    font-weight: 500;
+    color: #ffff;
+}
+
+.add-slide:hover {
+    background-color: #fff;
+    box-shadow: 0px 1px 10px #d9d9d9b8;
+}
+
+.add-slide:hover a {
     color: #141b1fda;
 }
 
