--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -169,6 +169,13 @@
     border-top: 1px dashed #9a9a9a;
 }
 
+.ship {
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-bottom: 30px;
+    border-top: 1px solid #9a9a9a;
+}
+
 .date {
     display: flex;
     color: #9a9a9a;
