--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -238,12 +238,14 @@
     color: #ffff;
 }
 
-.add-slide:hover {
+.add-slide:hover,
+.add-shoes:hover {
     background-color: #fff;
     box-shadow: 0px 1px 10px #d9d9d9b8;
 }
 
-.add-slide:hover a {
+.add-slide:hover a,
+.add-shoes:hover a {
     color: #141b1fda;
 }
 
