--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -278,3 +278,19 @@
     cursor: pointer;
     background-color: #fff;
 }
+
+
+/* ------------------------- /
+#Categories
+/ ------------------------- */
+
+.categorie-details {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.categorie-item {
+    padding: 10px 15px;
+    box-shadow: 0px 1px 10px #d9d9d9b8;
+}
