--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -294,3 +294,23 @@
     padding: 10px 15px;
     box-shadow: 0px 1px 10px #d9d9d9b8;
 }
+
+.categorie-details p {
+    margin-top: 20px;
+}
+
+.categorie-item div {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: flex-end;
+    -webkit-column-gap: 10px;
+}
+
+.categorie-item div i {
+    border-radius: 50%;
+    padding: 10px 12px;
+    color: #141b1fda;
+    box-shadow: 0px 1px 10px #d9d9d9b8;
+}
