--- a/asset/css/admin.css
+++ b/asset/css/admin.css
@@ -288,6 +288,10 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
+    display: grid;
+    gap: 15px;
+    -webkit-column-gap: 15px;
+    grid-template-columns: auto auto;
 }
 
 .categorie-item {
@@ -313,4 +317,8 @@
     padding: 10px 12px;
     color: #141b1fda;
     box-shadow: 0px 1px 10px #d9d9d9b8;
+}
+
+.categorie-item div .bi-trash3 {
+    color: #ad4949;
 }
