--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -130,10 +130,11 @@ header .header-content {
 .dashboard-user {
     position: absolute;
     top: 70px;
-    right: 0;
+    right: 30px;
     display: flex;
     padding: 20px 20px;
     flex-direction: column;
+    background-color: #ffffffef;
 }
 
 .dashboard-user a {
