--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -132,9 +132,11 @@ header .header-content {
     top: 70px;
     right: 30px;
     display: flex;
-    padding: 20px 20px;
+    gap: 20px;
+    padding: 20px 40px;
     flex-direction: column;
-    background-color: #ffffffef;
+    -webkit-column-gap: 20px;
+    background-color: #dde1e73a;
 }
 
 .dashboard-user a {
